--- a/calculator.html
+++ b/calculator.html
@@ -2,8 +2,8 @@
 
 <head>
     <meta charset="utf-8">
-    <!-- <meta name="description" content="Course html"> -->
-    <title>Simple game</title>
+    <!-- <meta name="description" content=""> -->
+    <title>Simple calculator</title>
     <link rel="styleSheet" href="fileCss.css" media="all">
 </head>
 
